# directory-player

./: .eslintrc.cjs  .gitignore  .prettierignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: main.yml
src/: App.css  App.tsx  app.tsx  main.css  main.tsx  rootReducer.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/player/: decode_worker.rs  errors.rs  file_stream.rs  manager.rs  mod.rs  output.rs  process.rs  queue.rs  resampler.rs
src/css/: vars.css
src/hooks/: use-global-play-pause-key-event-handler.ts
src/player/: index.ts  schemas.ts  types.ts
src/player/context/: playback-file-context.tsx  playback-state-context.tsx
src/player/hooks/: use-playback-file.ts  use-playback-state.ts
src/player/shared-ui/playback-button/: index.tsx  playback-button.styles.css
src/player/ui/player-debug-overlay/: index.tsx  player-debug-overlay.styles.css
src/player/ui/player-pane/: index.tsx  pause-button.tsx  play-button.tsx  player-pane.styles.css
src/player/ui/player-pane/pause-button/: index.tsx
src/player/ui/player-pane/play-button/: index.tsx
src/player/ui/player-pane/play-pause-button/: index.tsx
src/player/ui/player-pane/repeat-button/: index.tsx
src/player/ui/player-pane/seek-bar/: index.tsx  seek-bar.styles.css
src/player/ui/player-pane/shuffle-button/: index.tsx
src/player/ui/player-pane/skip-back-button/: index.tsx
src/player/ui/player-pane/skip-forward-button/: index.tsx
src/player/ui/player-pane/stop-button/: index.tsx
src/player/ui/player-pane/stream-metadata/: index.tsx  stream-metadata.styles.css
src/player/ui/player-pane/volume-slider/: index.tsx  volume-slider.styles.css
src/styles/: reset.css  vars.css
src/sync-storage/: index.ts
src/tauri/: index.ts
src/tauri/hooks/: use-event-listener.ts  use-latest-event-payload.ts
src/treeview/: ExpandButton.css  ExpandButton.tsx  FileIcon.css  FileIcon.tsx  RowListItem.css  RowListItem.tsx  TreeviewListing.css  TreeviewListing.tsx  TreeviewPane.css  TreeviewPane.tsx  TreeviewRow.tsx  actionTypes.ts  actions.ts  helpers.ts  index.ts  reducers.ts  selectors.ts  types.ts
src/treeview/FileBrowser/: index.tsx
src/treeview/context/: file-listing-context.ts
src/treeview/core/: basic-pub-sub.ts  file-listing.ts  file-type.ts  flat-listing.ts  notify-changed.ts  treeview-directory.ts
src/treeview/expand-button/: index.tsx
src/treeview/file-icon/: index.tsx
src/treeview/hooks/: use-flat-listing.ts
src/treeview/playing-indicator/: index.tsx  playing-indicator.styles.css
src/treeview/ui/treeview-pane/: index.tsx  treeview-pane.styles.css
src/treeview/ui/treeview-pane/listing-placeholder/: index.tsx  listing-placeholder.styles.css
src/treeview/ui/treeview-pane/treeview-listing/: index.tsx  treeview-listing.styles.css
src/treeview/ui/treeview-pane/treeview-listing/listing-placeholder/: index.tsx
src/treeview/ui/treeview-pane/treeview-listing/row-list-item/: index.tsx  row-list-item.styles.css
src/treeview/ui/treeview-pane/treeview-listing/row-list-item/expand-button/: expand-button.styles.css  index.tsx
src/treeview/ui/treeview-pane/treeview-listing/row-list-item/file-icon/: file-icon.styles.css  index.tsx
src/utils/: debounce.ts  path.ts  throttle.ts
(+2 files in other folders)
