[package]
name = "directory-player"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
arrayvec = "0.7.4"
cpal = "0.15.2"
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 0b23b6f = seeking fix
# 8a33286 = upstream
# 70792bc = seeking fix and file length fix
creek = { git = "https://github.com/jacobstern/creek", rev = "70792bc", features = [
  "decode-mp3",
] }

# creek = { path = "../../creek/", features = ["decode-mp3"] }
rtrb = "0.2.3"
symphonia = "0.5.3"
log = "0.4.20"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", rev = "5b814f5" }
rubato = "0.14.1"
tokio = "1.32.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
